syntax = "proto2";
package pb;

import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_enum_prefix_all) = false;

enum Code {
    CodeSucc            = 0;
    CodeBusy            = 1;
    CodeMissing         = 2;
    CodeInvalidChunk    = 3;
    CodeInvalidChecksum = 4;
    CodeOSSError        = 5;
    CodeMaxRetries      = 6;
}

enum Cmd {
    CmdHB                = 0;
    CmdUploadInit        = 1;
    CmdUploadInitRsp     = 2;
    CmdUpload            = 3;
    CmdUploadRsp         = 4;
    CmdUploadComplete    = 5;
    CmdUploadCompleteRsp = 6;
    CmdUploadContinue    = 7;
}

message Heartbeat {
    optional string mac           = 1 [(gogoproto.nullable) = false];
}

message InitUploadReq {
    optional uint64 seq           = 1 [(gogoproto.nullable) = false];
    optional string contentType   = 2 [(gogoproto.nullable) = false];
    optional int64  contentLength = 3 [(gogoproto.nullable) = false];
    optional int32  chunkCount    = 4 [(gogoproto.nullable) = false];
    optional int64  modTime       = 5 [(gogoproto.nullable) = false];
    optional string camera        = 6 [(gogoproto.nullable) = false];
    optional string mac           = 7 [(gogoproto.nullable) = false];
}

message InitUploadRsp {
    optional uint64 seq  = 1 [(gogoproto.nullable) = false];
    optional uint64 id   = 2 [(gogoproto.nullable) = false, (gogoproto.customname) = "ID"];
    optional Code   code = 3 [(gogoproto.nullable) = false];
}

message UploadReq {
    optional uint64 id   = 1 [(gogoproto.nullable) = false, (gogoproto.customname) = "ID"];
    optional int32 index = 2 [(gogoproto.nullable) = false];
    optional bytes data  = 3;
}

message UploadRsp {
    optional uint64 id   = 1 [(gogoproto.nullable) = false, (gogoproto.customname) = "ID"];
    optional int32 index = 2 [(gogoproto.nullable) = false];
    optional Code  code  = 3 [(gogoproto.nullable) = false];
}

message UploadCompleteReq {
    optional uint64 id  = 1 [(gogoproto.nullable) = false, (gogoproto.customname) = "ID"];
}

message UploadCompleteRsp {
    optional uint64 id  = 1 [(gogoproto.nullable) = false, (gogoproto.customname) = "ID"];
    optional Code  code = 2 [(gogoproto.nullable) = false];
}

message UploadContinue {
    optional uint64 id = 1 [(gogoproto.nullable) = false, (gogoproto.customname) = "ID"];
}